2003-01-24  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectInputOutput/OutputTest.java:
	Explicitly check for ObjectStreamExceptions and only compare
	contents when no such exceptions are thrown.

2003-01-25  Stephen Crawley <crawley@dstc.edu.au>
	* gnu/testlet/java/math/BigDecimal/DiagBigDecimal.java: fixed some
	error case tests to catch the correct exceptions, and only to 
	test the exception messages if CHECK_EXCEPTION_MESSAGES is true.

2003-01-24  Raif Naffah <raif@fl.net.au>
        * gnu/testlet/SimpleTestHarness.java (main): added a -file
	option as an alternative to stdin for reading selected test
	classes.

2003-01-21  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/File/jdk11.java (test): Added check for
	absoluteness of empty string.

2003-01-20  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/math/BigDecimal/DiagBigDecimal.java (diagrun):
	Return void.
	(DiagException): Remove and use RuntimeException if necessary.
	(summary): Removed.
	(Test): Removed.

2003-01-18  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/String/getBytes.java: Add new UTF8 test.

2003-01-03  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectStreamClass/ProxyTest.java: New test.

2003-01-02  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FilterInputStream/SimpleRead.java: Don't use
	inner classes to help gcj.
	* gnu/testlet/java/io/FilterReader/SimpleRead.java: Likewise.
	* gnu/testlet/java/io/OutputStream/Test.java: Likewise.

2003-01-02  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FilterInputStream/MarkReset.java: Don't use
	inner classes to help gcj.
	* gnu/testlet/java/io/FilterWriter/write.java: Likewise.
	* gnu/testlet/java/io/InputStream/Test.java: Likewise.
	* gnu/testlet/java/io/PrintWriter/jdk11.java: Likewise.
	* gnu/testlet/java/io/Reader/Test.java: Likewise.
	* gnu/testlet/java/io/Writer/Test.java: Likewise.

2003-01-02  Mark Wielaard  <mark@klomp.org>
